<resources>
    <string name="app_name">Calender Pro</string>
    <string name="app_name_with_hash">#Calender Pro</string>
    <string name="organize_achieve_repeat">Schedule Planner</string>
    <string name="daily_planner">Calender Pro</string>
    <string name="name">Name</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="or_log_in_with">or log in with</string>
    <string name="already_an_account_log_in">Already an account? Log in</string>
    <string name="enter_password">Enter password</string>
    <string name="tasks">Tasks</string>
    <string name="activity_hub">Activity Hub</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_continuing_you_accept_our_privacy_policy_nand_end_user_license_agreement">By continuing, you accept our Privacy policy\nand End User License Agreement.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_4_digits_code">Enter 6 digits code</string>
    <string name="enter_the_4_digits_code_that_you_received_non_on_your_email">Enter the 6 digits code that you received\n on your email.</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="password_hint">******</string>
    <string name="reset_password">Reset password</string>
    <string name="set_the_new_password_for_your_account_nso_ypu_can_login_and_access_all_the_nfeatures">Set the new password for your account\nso you can login and access all the\nfeatures.</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="today">Today,</string>
    <string name="resend_code">Resend Code</string>
    <string name="welcome_back_with_comma">Welcome back,</string>
    <string name="upgrade">UPGRADE</string>
    <string name="notifications">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="verify">Verify</string>
    <string name="help_amp_support"><![CDATA[Help & support]]></string>
    <string name="support_email"><u>support@calendarpro.app</u></string>
    <string name="privacy_policy"><u>privacy policy</u></string>
    <string name="logout">Logout</string>
    <string name="verified">Verified</string>
    <string name="lists">Lists</string>
    <string name="hello_there">Hello there!</string>
    <string name="we_are_delighted_to_have_you_on_board_to_enhance_your_app_experience_let_s_walk_through_a_few_quick_steps">We are delighted to have you on board! To enhance your app experience, let\'s walk through a few quick steps.</string>
    <string name="allow_app_access_to_your_phone_contacts_to_use_the_call_reminders_and_calendar_share_features">Allow app access to your phone contacts to use the Call Reminders and Calendar Share features.</string>
    <string name="more_info">More Info</string>
    <string name="notes">Draw over the apps</string>
    <string name="enable_our_quick_action_feature_in_3_steps">Steps for enabling</string>
    <string name="step_1_press_enable_below">Step 1: Press \"Continue\" below.</string>
    <string name="step_2_find_the_daily_planner_app_in_the_list">Step 2: Find the Calender Pro app in the list.</string>
    <string name="step_3_enable_the_toggle_switch">Step 3: Enable the toggle switch.</string>
    <string name="this_week">This Week</string>
    <string name="today_no_comma">Today</string>
    <string name="view_all">View all</string>
    <string name="task_list">Task list</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="total_calls_emails">Total calls / Emails</string>
    <string name="calls_emails">Calls / Emails</string>
    <string name="water_traker">Water Tracker</string>
    <string name="add_consumption">Add Consumption</string>
    <string name="rate_your_day">Rate your day</string>
    <string name="know_your_day">Know your day!</string>
    <string name="_1_jun_to_07_jun">1 Jun to 07 Jun</string>
    <string name="health">Health</string>
    <string name="productivity">Productivity</string>
    <string name="mood">Mood</string>
    <string name="to_do_list">To do list</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="glass">Glass</string>
    <string name="today_consumption">Today Consumption</string>
    <string name="done">Done</string>
    <string name="new_task">New Task</string>
    <string name="title_task">Title Task</string>
    <string name="hint_title">title</string>
    <string name="select_category">Select Category</string>
    <string name="rb_calls_emails">Calls / Emails</string>
    <string name="description">Description</string>
    <string name="add_description">Add Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="btn_done">Done</string>
    <string name="email_phone_no">Email / Phone No.</string>
    <string name="hint_email_phone_no">Email / Phone No.</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="list_name">List Name</string>
    <string name="enter_name_txt">Enter Name</string>
    <string name="create">Create</string>
    <string name="poor">Poor</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="btn_2done">Done</string>
    <string name="next">Next</string>
    <string name="reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="title_activity_view_or_edit_task">ViewOrEditTaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="adUnitIdTaskFragment">ca-app-pub-5494564193816040/2107345434</string>
    <string name="adUnitIdHubFragment">ca-app-pub-5494564193816040/2107345434</string>
    <string name="adUnitIdListFragment">ca-app-pub-5494564193816040/2107345434</string>
    <string name="adAppIdManifest">ca-app-pub-5494564193816040~1015316117</string>
    <string name="select_countries">Select country</string>
    <string name="draw_over_the_apps">Draw over the apps</string>
    <string name="to_show_on_top_of_other_apps_our_pro_gallery_widgets">To show on top of other apps our pro gallery widgets</string>
    <string name="caller_account_id">a1-fea5c453-b615-4322-be8a-bce981a955ec</string>
    <string name="caller_app_id">b0-24b02f7e-69fd-4278-bfd8-673d4464563f</string>
    <string name="today_s_tasks_and_events">Today\'s Tasks and Events</string>
    <string name="my_subscription"><u>My subscription</u></string>
    <string name="one_month_price">₹ 249.00/month</string>
    <string name="manage_subscription"><u>Manage Subscription</u></string>
    <string name="one_year_price">₹ 2490.00/year</string>
    <string name="sub_description"><![CDATA[All app features are free to use without a subscription. For an ad free version of the app, you can choose between monthly and yearly subscription plans.]]></string>
    <string name="sub_bottom_desc"><![CDATA[Payment will be charged to your Google Play account. Your subscription will automatically renew unless auto-renew is turned off at least 24 hours before the end of your current period. Subscription, cancellation, and auto-renewal can be managed from your Google Play account.]]></string>

</resources>