<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.permission.DisplayOverLayFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:text="@string/draw_over_the_apps"
                    android:textColor="@color/color_171B1E"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/to_show_on_top_of_other_apps_our_pro_gallery_widgets"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/enable_our_quick_action_feature_in_3_steps"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvStep1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/step_1_press_enable_below"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvStep2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/step_2_find_the_daily_planner_app_in_the_list"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvStep3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/step_3_enable_the_toggle_switch"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
