<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.permission.ContactPermissionFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:text="@string/hello_there"
                    android:textColor="@color/color_171B1E"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/we_are_delighted_to_have_you_on_board_to_enhance_your_app_experience_let_s_walk_through_a_few_quick_steps"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="104dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="Allow app access to your phone state to create call reminders during after call."
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/allow_app_access_to_your_phone_contacts_to_use_the_call_reminders_and_calendar_share_features"
                    android:textColor="@color/color_171B1E"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>
