<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/color_bg"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="85dp"
            android:src="@drawable/ic_logo_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDailyPlanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/inter_bold"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/let_s_get_started"
            android:textColor="@color/color_25282B"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/name"
            android:textColor="@color/color_25282B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvDailyPlanner"
            app:layout_constraintTop_toBottomOf="@+id/tvDailyPlanner" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="230dp"
            android:layout_height="44dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_name"
            android:singleLine="true"
            android:paddingHorizontal="20dp"
            android:textColor="@color/color_171B1E"
            android:textColorHint="@color/color_CBCBCB"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:visibility="gone"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/error"
            android:textColor="@color/color_DD2619"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_semibold"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/email"
            android:textColor="@color/color_25282B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="230dp"
            android:layout_height="44dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:singleLine="true"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_email"
            android:paddingHorizontal="20dp"
            android:textColor="@color/color_171B1E"
            android:textColorHint="@color/color_CBCBCB"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:visibility="gone"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/error"
            android:textColor="@color/color_DD2619"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/inter_semibold"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/password"

            android:textColor="@color/color_25282B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
        <ImageView
            android:id="@+id/ivVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_pwd_invisible"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            app:tint="@color/color_9EA0A2" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="230dp"
            android:layout_height="44dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/enter_password"
            android:paddingHorizontal="20dp"
            android:textColor="@color/color_171B1E"
            android:textColorHint="@color/color_CBCBCB"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/error"
            android:gravity="end"
            android:textColor="@color/color_DD2619"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:ignore="SmallSp" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnSignUp"
            android:layout_width="230dp"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/inter_semibold"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:initialCornerAngle="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordError"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            android:id="@+id/tvOrSignUpWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/inter_medium"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/or_sign_up_with"
            android:textColor="@color/color_696B6D"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/socialLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrSignUpWith">

            <ImageButton
                android:id="@+id/ibGoogle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/color_DD2619"
                android:src="@drawable/ic_google" />

            <ImageButton
                android:id="@+id/ibFacebook"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/color_3B5998"
                android:src="@drawable/ic_facebook" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvAlreadyAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/already_an_account_log_in"
            android:textColor="@color/color_9EA0A2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/socialLl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

