<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFEF9"
        android:minWidth="333dp"
        app:cardCornerRadius="2dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="333dp"
            android:background="#FFFEF9"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_name"
                android:textSize="14sp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/inter_medium"/>
            <EditText
                android:id="@+id/etListName"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/white"
                android:elevation="3dp"
                android:layout_margin="2dp"
                android:singleLine="true"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_name_txt"
                android:paddingHorizontal="20dp"
                android:textColor="@color/color_171B1E"
                android:textColorHint="@color/color_CBCBCB"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tvlistError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/error"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:textColor="@color/color_DD2619"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                tools:ignore="SmallSp" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bordered_btn_bg"
                    android:fontFamily="@font/inter_semibold"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/color_25282B"
                    android:textSize="14sp"
                    app:initialCornerAngle="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                    app:spinning_bar_color="@color/color_25282B"
                    android:layout_marginEnd="10dp"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
                <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnCreate"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:initialCornerAngle="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</layout>
